<resources>
    <string name="app_name">project-real</string>
    <string name="today">Today</string>
    <string name="activity">Activity</string>
    <string name="task_name">Task Name</string>
    <string name="type">Type</string>
    <string name="Category">Category</string>
    <string name="Finish">Finish</string>
    <string name="Cancel">Cancel</string>
    <string name="page_title">Create Task</string>
    <string name="label">Enter Task</string>
    <string name="start_timer">Start Timer</string>

    <string name="counter">Counter</string>
    <string name="worldcup_2k19">worldcup_2k19</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="countleft">countleft</string>

    <string name="reset">reset</string>
    <string name="finish">finish</string>
    <string name="start">start</string>


</resources>