<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateTaskPage"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/page_title"
            app:titleCentered="true"
            android:background="@color/white"
            app:menu="@menu/top_app_bar"/>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/id_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"

            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:text="@string/task_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/id_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"

            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:text="@string/type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/id_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"

            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:text="@string/Category"
            android:textSize="18sp" />

        <Button
            android:id="@+id/task_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Finish"
            android:backgroundTint="@color/main_theme"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:width="270dp"
            />

        <Button
            android:id="@+id/task_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginStart="50dp"
            android:width="270dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>